\name{NEWS}
\title{News for Package \pkg{eRm}}
\encoding{UTF-8}
\section{Changes in Version 1.0-0}{
  \itemize{
	  \item Additional tests in \code{NPtest()} added.
	  \item Toy datasets stored as data frames.
	}
}

\section{Changes in Version 0.16-0}{
  \itemize{
	  \item \code{PersonMisfit()} incl. S3 added.
	}
}
\section{Changes in Version 0.15-8}{
  \itemize{
	 \item sanity check for missings in split vector in \code{LRtest.Rm()} added.
	 \item smoother confidence bands added in \code{plotGOF()}.
	}
}
\section{Changes in Version 0.15-7}{
  \itemize{
	  \item \code{LRtest.Rm()}: bugfix due to updates in base R.
	}
}
\section{Changes in Version 0.15-6}{
  \itemize{
	  \item \code{plotGOF()}: added arguments \code{x_axis}, \code{y_axis}, \code{set_par}, and \code{reset_par} to ease customization of the plot.
		\item Imports functions from default packages packages, as required by the new CRAN-check.
	}
}
\section{Changes in Version 0.15-5}{
  \itemize{
    \item implemented an \code{anova()} method for all models (except \acronym{LLRA}s, which have their own: \code{anova.llra}). see \code{?anova.eRm}
    \item added a function to compute separation reliability, as proposed in Wright & Stone (1999; see \code{?SepRel}).
    \item \code{plotINFO()} accepts more arguments via \code{\dots} (see \code{?plotINFO}).
    \item fixed a bug in \code{plotPWmap()}.
    \item fixed a bug in the internal function \code{get_item_cats()} related to \code{NA}s (affecting \acronym{LLRA} and item-information functions).
    \item switched encoding to \acronym{UTF}-8 to avoid problems with diacritics, etc. (e.g., Martin-Löf).
		\item updated citations.
    \item general improvements.
  }
}
\section{Changes in Version 0.15-4}{
  \itemize{
    \item streamlining some functions, updating the vignette, etc.
    \item warnings are now treated more consistently and can be suppressed with \code{suppressWarnings()}